--- a/styles/style.css
+++ b/styles/style.css
@@ -23,13 +23,7 @@
   line-height: 76px;
   font-weight: 500;
   color: #000;
-  margin: 128px 0 0;
-  max-width: 601px;
-}
-
-.header__description {
-  font-size: 20px;
-  line-height: 30px;
+  margin: 128px 0 0;ls
   color: #000;
   margin: 32px 0 0;
   max-width: 522px;
