--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@
   line-height: 76px;
   font-weight: 500;
   color: #000;
-  margin: 128px 0 0;ls
+  margin: 128px 0 0;
   color: #000;
   margin: 32px 0 0;
   max-width: 522px;
